Fixed overflow scroll

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -48,6 +48,7 @@
     }
     .svg_container {
       font-family: Inter, Helvetica, Arial, sans-serif;
+      overflow: scroll;
       svg {
         max-width: 100%;
         min-width: 600px;
